{
    "name": "InputActionControl",
    "maps": [
        {
            "name": "ActionMap",
            "id": "8b9f393e-41d1-4a94-9b0f-d22e98679ce0",
            "actions": [
                {
                    "name": "LeftMove",
                    "type": "Button",
                    "id": "ce71cbd4-a441-47b0-a487-46c82c450f02",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "RightMove",
                    "type": "Button",
                    "id": "ae920e73-50de-4803-8d76-2b9ef3b2c02b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "ReleaseBall",
                    "type": "Button",
                    "id": "b81ad047-be8d-4123-b44b-b55f8ac9d59e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "c096ccc5-2226-4756-afb4-5857ee17281e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "Menu_GoBack",
                    "type": "Button",
                    "id": "9a26ebc0-844f-4aad-ac73-f3753b63adf7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "435385f6-97b4-42b0-904c-5cd19cdc8045",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "pc",
                    "action": "LeftMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e2544bfc-eafc-4f50-a3c7-850c7eee941f",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "pc",
                    "action": "RightMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f9fd7eba-001b-4d09-8830-36ecf6f5bc43",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "pc",
                    "action": "Menu_GoBack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2ce34291-d29b-4825-9c12-dcd176b5bb62",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "pc",
                    "action": "ReleaseBall",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0c53ea54-52ef-4e74-8214-2571a97525dc",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "pc",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "pc",
            "bindingGroup": "pc",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}